understanding-images-change

--- a/index2.html
+++ b/index2.html
@@ -95,7 +95,7 @@
                             y2="41.9364"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00FFE1" />
+                            <stop offset="1" stop-color="#00FFE1" />
                             <stop offset="1" stop-color="#6E5DF6" />
                           </linearGradient>
                         </defs>
@@ -138,7 +138,7 @@
                             y2="37.486"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00FFE1" />
+                            <stop offset="1" stop-color="#00FFE1" />
                             <stop offset="1" stop-color="#6E5DF6" />
                           </linearGradient>
                         </defs>
@@ -180,7 +180,7 @@
                             y2="36.3601"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00FFE1" />
+                            <stop offset="1" stop-color="#00FFE1" />
                             <stop offset="1" stop-color="#6E5DF6" />
                           </linearGradient>
                         </defs>
@@ -198,7 +198,7 @@
               <div class="col-lg-6 col-md-3 col-sm-6 ps_10 col-12">
                 <div class="benifit_gradient mb-27 p_2">
                   <div
-                    class="benifit_card  d-flex flex-column align-items-center"
+                    class="benifit_card d-flex flex-column align-items-center"
                   >
                     <span class="icons_card"
                       ><svg
@@ -237,7 +237,7 @@
                             y2="-0.896961"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00FFE1" />
+                            <stop offset="1" stop-color="#00FFE1" />
                             <stop offset="1" stop-color="#6E5DF6" />
                           </linearGradient>
                           <linearGradient
@@ -248,7 +248,7 @@
                             y2="-4.45403"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00FFE1" />
+                            <stop offset="1" stop-color="#00FFE1" />
                             <stop offset="1" stop-color="#6E5DF6" />
                           </linearGradient>
                           <linearGradient
@@ -259,7 +259,7 @@
                             y2="8.22718"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00FFE1" />
+                            <stop offset="1" stop-color="#00FFE1" />
                             <stop offset="1" stop-color="#6E5DF6" />
                           </linearGradient>
                           <linearGradient
@@ -270,7 +270,7 @@
                             y2="14.848"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00FFE1" />
+                            <stop offset="1" stop-color="#00FFE1" />
                             <stop offset="1" stop-color="#6E5DF6" />
                           </linearGradient>
                           <linearGradient
@@ -281,7 +281,7 @@
                             y2="19.7912"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00FFE1" />
+                            <stop offset="1" stop-color="#00FFE1" />
                             <stop offset="1" stop-color="#6E5DF6" />
                           </linearGradient>
                         </defs>
@@ -362,7 +362,7 @@
             >
               <img
                 class="man_img"
-                src="./assets/images/png/understanding-man-1.png"
+                src="./assets/images/png/understanding-man-2.png"
                 alt="man-img"
               />
               <p
