--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                     <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
                         <div
                             class="understanding_card gap-3 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                            <img class="man_img" src="./assets/images/png/understanding-man-1.png" alt="man-img" />
+                            <img class="man_img" src="./assets/images/png/understanding-man-2.png" alt="man-img" />
                             <p class="ff_opensans fw-bolder text-center text-lg-start italic text-white lh_md fs_xs">
                                 Mike invested
                                 <span class="fw-normal style_normal">
@@ -772,7 +772,7 @@
             </span>
             <div class="container py-4 py-md-5">
                 <div class="max_w_Faq mx-auto">
-                    <h2 class="ff_ff_opensanssans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked
+                    <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked
                         <span class="blueGraident textBg">Questions</span>
                     </h2>
                     <div class="pt-4 pt-sm-5 mt_12">
@@ -949,8 +949,8 @@
                 <div
                     class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
                     <div class="maxWidth">
-                        <p class="open fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
-                        <p class="open fs_xs fw-normal white lh_xxl mb-0 opacity-80 pt-3 d-none d-sm-block ">
+                        <p class="ff_opensans fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
+                        <p class="ff_opensans fs_xs fw-normal white lh_xxl mb-0 opacity-80 pt-3 d-none d-sm-block ">
                             Empowering Your Financial Future
                             <span class="d-sm-block">with Intelligent Investments</span>
                         </p>
@@ -958,7 +958,7 @@
                             Policy | Conditions | Report Abuse/ Spam</p>
                     </div>
                     <div class="d-flex jusity-content-center flex-column py-3 mt_12 mt-sm-0 py-sm-0">
-                        <p class="open fw-semibold fs_sm lh_xxl white mb-0 text-center">
+                        <p class="ff_opensans fw-semibold fs_sm lh_xxl white mb-0 text-center">
                             Follow Us on
                         </p>
                         <div class="d-flex justify-content-center gapFooterLink footerPadding">
@@ -1040,6 +1040,15 @@
                 </div>
             </div>
         </footer>
+        <!-- back to  top -->
+        <button id="backtotop" onclick="window.scroll(0,0)" class=" d_none back_top_btn  z-2 ">
+            <span class="back mb-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="20" height="20">
+                    <path
+                        d="M3.22 10.53a.749.749 0 0 1 0-1.06l4.25-4.25a.749.749 0 0 1 1.06 0l4.25 4.25a.749.749 0 1 1-1.06 1.06L8 6.811 4.28 10.53a.749.749 0 0 1-1.06 0Z"
+                        fill="white">
+                    </path>
+                </svg></span>
+        </button>
     </div>
     </section>
     <!-- counter -->
