--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
     <meta property="twitter:image" content="https://i.ibb.co/LzLxZsH/127-0-0-1-5500-index3-html.png" />
 </head>
 
-<body class="bg_body">
+<body class="bg_body overflow_hidden">
+    <!-- preloader -->
+    <div id="preloder"
+        class="vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z-5">
+        <div class=" preloder fw-semibold ff_main text-white fs_2xl flex-column d-flex">
+            <P class="fs_xl ff_opensans text-white">Strack<span class="text_white">Ai</span></P>
+            <div class="ciclre mx-auto"></div>
+        </div>
+    </div>
     <div class="overflow-x-hidden">
         <!-- header section  -->
         <header class=" bg-hero-img position-relative mb-100 overflow-x-clip  z-1">
@@ -78,8 +86,8 @@
                         class=" d-flex align-items-center  align-items-lg-start    justify-content-between flex-column  flex-lg-row   align-items-start   mt-39">
                         <div class="max-w-654">
                             <div class="vedio position-relative  z-1">
-                                <video id="vid" src="./assets/images/vedio/car.mp4" muted autoplay="autoplay"
-                                    loop class="w-100  h-100 d-block  "></video>
+                                <video id="vid" src="./assets/images/vedio/car.mp4" muted autoplay="autoplay" loop
+                                    class="w-100  h-100 d-block  "></video>
                                 <span class="vedio-tag"><svg width="121" height="120" viewBox="0 0 121 120" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <rect x="1.25532" y="1.14594" width="118.021" height="118.021" rx="59.0105"
@@ -525,7 +533,7 @@
                                                     <linearGradient id="paint1_linear_1162_443" x1="13.3582"
                                                         y1="22.3625" x2="18.8484" y2="-4.45403"
                                                         gradientUnits="userSpaceOnUse">
-                                                        <sto offset="1"p stop-color="#00FFE1" />
+                                                        <sto offset="1" p stop-color="#00FFE1" />
                                                         <stop offset="1" stop-color="#6E5DF6" />
                                                     </linearGradient>
                                                     <linearGradient id="paint2_linear_1162_443" x1="30.7047"
