--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body class="bg_body overflow_hidden">
     <!-- preloader -->
     <div id="preloder"
-        class="vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z-5">
+        class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_5">
         <div class=" preloder fw-semibold ff_main text-white fs_2xl flex-column d-flex">
             <P class="fs_xl ff_opensans text-white">Strocks<span class="text_white">Ai</span></P>
             <div class="ciclre mx-auto"></div>
