--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     <!--================bootstrap-link=================== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--============slick-slider-link============== -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
-        integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
-        integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Ai-stock</title>
+    <title>Ai-stocks</title>
     <meta name="title" content="Ai-stock" />
     <meta name="description"
         content="Dive into the Explosive Momentum of 2024 with the Top 7 Fastest-Growing AI Stocks!" />
@@ -38,8 +31,8 @@
     <!-- preloader -->
     <div id="preloder"
         class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_5">
-        <div class=" preloder fw-semibold ff_main text-white fs_2xl flex-column d-flex">
-            <P class="fs_xl ff_opensans text-white">Strocks<span class="text_white">Ai</span></P>
+        <div class="preloder text-white fs_2xl flex-column d-flex">
+            <P class="fs_xl ff_opensans fw-bold text-white">Stocks<span class="text_white">Ai</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
     </div>
@@ -254,7 +247,7 @@
                                     </div>
                                     <p class=" mb-0 text-white " id="errornumber"></p>
                                     <button aria-label="fromsubmit" id="submit" type="submit"
-                                        class=" mt-32 text-decoration-none w-100 ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Get
+                                        class=" mt-32 text-decoration-none w-100 ff_opensans c-black-100 fw-bold fs_xs lh_xsm nav-button  ">Get
                                         Started</button>
                                 </form>
                             </div>
@@ -1080,13 +1073,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <!--====================slick-slider-links==========================-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"
-        integrity="sha512-eP8DK17a+MOcKHXC5Yrqzd8WI5WKh6F1TIk5QZ/8Lbv+8ssblcz7oGC8ZmQ/ZSAPa7ZmsCU4e/hcovqR8jfJqA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </script>
     <script src="./assets/js/app.js"></script>
 
