--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" href="./assets/images/png/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/webp/favicon.webp" type="image/x-icon">
     <!--================bootstrap-link=================== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -404,7 +404,7 @@
                 <div class="row flex-sm-row flex-column-reverse align-items-center pb-md-5 mb-2 justify-content-center">
                     <div class="col-lg-6 col-sm-12 d-flex justify-content-center align-items-center position-relative">
                         <div class="position-relative">
-                            <img class="mobile_wh position-relative z-3" src="./assets/images/png/benifit-mobile.png"
+                            <img class="mobile_wh position-relative z-3" src="./assets/images/webp/benifit-ellip.webp"
                                 alt="mobile_image" />
                             <div class="position-absolute mobile_inner_part z-5">
                                 <img class="w-100 mobile_trading" src="./assets/images/png/benifit-mobile-trading.png"
@@ -418,7 +418,7 @@
                                 </p>
                             </div>
                         </div>
-                        <img class="mobile_back_ellp position-absolute z-1" src="./assets/images/png/benifit-ellip.png"
+                        <img class="mobile_back_ellp position-absolute z-1" src="./assets/images/webp/benifit-ellip.webp"
                             alt="ellipse" />
                     </div>
                     <div class="col-lg-6 col-sm-12 pt-5">
@@ -678,73 +678,61 @@
                     <div class="position-relative d-flex gap-12 overflow-hidden mx-auto">
                         <div
                             class="d-flex align-items-center gap-12 brand_slider_parent3 position-relative  start-0 top-0 h-100">
-                            <img src="./assets/images/png/knx-img.png" alt="ford"
+                            <img src="./assets/images/webp/knx-img.webp" alt="knx"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/google.png" alt="ford"
+                            <img src="./assets/images/webp/google.webp" alt="google"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/spotify.png" alt="ford"
+                            <img src="./assets/images/webp/spotify.webp" alt="spotify"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/tesla.png" alt="ford"
+                            <img src="./assets/images/webp/tesla.webp" alt="tasla"
                                 class="company-dimension rounded-1 w-100">
                         </div>
                         <div
                             class="d-flex align-items-center gap-12 brand_slider_parent4 position-relative  start-0 top-0 h-100">
-                            <img src="./assets/images/png/knx-img.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/google.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/spotify.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/tesla.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/webp/knx-img.webp" alt="knx" class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/webp/google.webp" alt="google" class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/webp/spotify.webp" alt="spotify" class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/webp/tesla.webp" alt="tasla" class="company-dimension rounded-1 w-100">
                         </div>
                     </div>
                     <div class="position-relative mt-12 d-flex gap-20 overflow-hidden mx-auto">
                         <div
                             class="d-flex align-items-center gap-12 brand_slider_parentalternate3 position-relative  start-0 top-0 h-100">
-                            <img src="./assets/images/png/company-name.png" alt="ford"
+                            <img src="./assets/images/webp/company-name.webp" alt="company"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/ford.png" alt="ford"
+                            <img src="./assets/images/webp/ford.webp" alt="ford"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/samsung.png" alt="ford"
+                            <img src="./assets/images/webp/samsung.webp" alt="samsung"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/tata-img.png" alt="ford"
+                            <img src="./assets/images/webp/tata-img.webp" alt="tata"
                                 class="company-dimension rounded-1 w-100">
                         </div>
                         <div
                             class="d-flex align-items-center gap-12 brand_slider_parentalternate4 position-relative  start-0 top-0 h-100">
-                            <img src="./assets/images/png/company-name.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/ford.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/samsung.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/tata-img.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/webp/company-name.webp" alt="company" class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/webp/ford.webp" alt="ford" class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/webp/samsung.webp" alt="samsung" class="company-dimension rounded-1 w-100">
+                            <img src="./assets/images/webp/tata-img.webp" alt="tata" class="company-dimension rounded-1 w-100">
                         </div>
                     </div>
                     <div class="position-relative mt-12 d-flex gap-20 overflow-hidden mx-auto">
                         <div
                             class="d-flex align-items-center gap-12 brand_slider_parent3 position-relative  start-0 top-0 h-100">
-                            <img src="./assets/images/png/company-name.png" alt="ford"
+                            <img src="./assets/images/webp/company-name.webp" alt="company"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/reliance.png" alt="ford"
+                            <img src="./assets/images/webp/reliance.webp" alt="reliance"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/stripe.png" alt="ford"
+                            <img src="./assets/images/webp/stripe.webp" alt="stripe"
                                 class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/adani.png" alt="ford"
+                            <img src="./assets/images/webp/adani.webp" alt="adani"
                                 class="company-dimension rounded-1 w-100">
                         </div>
                         <div
                             class="d-flex align-items-center gap-12 brand_slider_parent4 position-relative  start-0 top-0 h-100">
-                            <img src="./assets/images/png/company-name.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/reliance.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/stripe.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
-                            <img src="./assets/images/png/adani.png" alt="ford"
-                                class="company-dimension rounded-1 w-100">
+                        <img src="./assets/images/webp/company-name.webp" alt="company" class="company-dimension rounded-1 w-100">
+                        <img src="./assets/images/webp/reliance.webp" alt="reliance" class="company-dimension rounded-1 w-100">
+                        <img src="./assets/images/webp/stripe.webp" alt="stripe" class="company-dimension rounded-1 w-100">
+                        <img src="./assets/images/webp/adani.webp" alt="adani" class="company-dimension rounded-1 w-100">
                         </div>
                     </div>
                 </div>
