--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                             <img class="mobile_wh position-relative z-3" src="./assets/images/webp/benifit-ellip.webp"
                                 alt="mobile_image" />
                             <div class="position-absolute mobile_inner_part z-5">
-                                <img class="w-100 mobile_trading" src="./assets/images/png/benifit-mobile-trading.png"
+                                <img class="w-100 mobile_trading" src="./assets/images/webp/benifit-mobile-trading.webp"
                                     alt="trading-image" />
                                 <p class="mb-15 off-black3 text-center fw-bold lh_2lg fs_2md mt-4">
                                     Al revolution!
@@ -585,7 +585,7 @@
                     <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
                         <div
                             class="understanding_card gap-3 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                            <img class="man_img" src="./assets/images/png/understanding-man-1.png" alt="man-img" />
+                            <img class="man_img" src="./assets/images/webp/understanding-man-1.webp" alt="man-img" />
                             <p class="ff_opensans fw-bolder text-center text-lg-start italic text-white lh_md fs_xs">
                                 John invested
                                 <span class="fw-normal style_normal">
@@ -593,12 +593,12 @@
                                     could potentially earn up to $40.</span>
                             </p>
                         </div>
-                        <img class="trade_img w-100" src="./assets/images/png/trade-1.png" alt="" />
+                        <img class="trade_img w-100" src="./assets/images/webp/trade-1.webp" alt="trade-1" />
                     </div>
                     <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
                         <div
                             class="understanding_card gap-3 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                            <img class="man_img" src="./assets/images/png/understanding-man-2.png" alt="man-img" />
+                            <img class="man_img" src="./assets/images/webp/understanding-man-2.webp" alt="man-img" />
                             <p class="ff_opensans fw-bolder text-center text-lg-start italic text-white lh_md fs_xs">
                                 Mike invested
                                 <span class="fw-normal style_normal">
@@ -608,7 +608,7 @@
                                     leveraging on potential gains.</span>
                             </p>
                         </div>
-                        <img class="trade_img w-100" src="./assets/images/png/trade-2.png" alt="" />
+                        <img class="trade_img w-100" src="./assets/images/webp/trade-2.webp" alt="trade-2" />
                     </div>
                 </div>
                 <div class="d-flex flex-column align-items-center pb-xl-5 justify-content-center">
