--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                                 <p class="mb-15 off-black3 text-center fw-bold lh_2lg fs_2md mt-4">
                                     Al revolution!
                                 </p>
-                                <p class="fs_sm mw_224 fw-normal lh_2md text-center ff_opensans gray">
+                                <p class="fs_sm mw_224 fw-normal lh_2md text-center ff_opensans gray2">
                                     Don't miss out on the Al revolution! Investors have witnessed
                                     remarkable returns up to 166.32% in Al Stocks in recent years.
                                 </p>
