--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="preloder"
         class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
         <div class="preloder text-white fs_2xl flex-column d-flex">
-            <P class="fs_xl ff_opensans fw-bold text-white">Stocks<span class="text_white">Ai</span></P>
+            <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
     </div>
