--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                                     </div>
                                 </div>
                                 <input id="Email" type="email" placeholder="Email"
-                                    class="email-input-style-header mt-3 ff_opensans fw-normal fs-xs lh_xsm c-black-100 AiStockInput place">
+                                    class="email-input-style-header mt-3 ff_opensans fw-normal fs-xs lh_xsm AiStockInput place">
                                 <p class="mb-0 text-white" id="errorEmail"></p>
                                 <div class="d-flex align-items-center rounded-1 overflow-hidden mt-3 borderInput">
                                     <div class="d-flex align-items-center bg_grayblack white gap-1 p-3">+91
