--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column align-items-center pb-xl-5 justify-content-center">
-                    <button class="common_btn fw-bold ff_opensans fs_xs lh_xsm text_black">
+                    <button aria-label="maximizeproduct" class="common_btn fw-bold ff_opensans fs_xs lh_xsm text_black">
                         Maximize Your Profit
                     </button>
                     <p class="text-white mt-2 mb-xl-5 text-center ff_opensans fw-normal fs_xs lh_xsm">
@@ -757,7 +757,7 @@
                             <span class="gradient_text">Deposit of $250 to 521$</span>
                         </h2>
                         <div class="mt-xl-3">
-                            <button class="ff_opensans fw-bold fs_xs lh_xsm common_btn">Register Now</button>
+                            <button aria-label="registernow" class="ff_opensans fw-bold fs_xs lh_xsm common_btn">Register Now</button>
                         </div>
                     </div>
                 </div>
@@ -914,7 +914,7 @@
                                         class="email-input-style-header bg-gray ff_opensans fw-normal fs-xs lh_xsm place AiStockInputPhone">
                                 </div>
                                 <p class="mb-0 text-white" id="errorNumber"></p>
-                                <button id="Submit" type="submit"
+                                <button aria-label="signups" id="Submit" type="submit"
                                     class="mt-32 text-decoration-none w-100 ff_opensans text-black btnSignup fw-bold fs_xs lh_xsm">Sign
                                     Up</button>
                             </form>
@@ -964,7 +964,7 @@
                             Follow Us on
                         </p>
                         <div class="d-flex justify-content-center gapFooterLink footerPadding">
-                            <a href="https://www.facebook.com/radialcode/" target="blank"
+                            <a aria-label="facebook" href="https://www.facebook.com/radialcode/" target="blank"
                                 class="circle d-flex justify-content-center align-items-center">
                                 <span><svg width="10" height="17" viewBox="0 0 10 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -974,7 +974,7 @@
                                     </svg>
                                 </span>
                             </a>
-                            <a href="https://www.instagram.com/radialcode/?hl=en" target="blank"
+                            <a aria-label="instagram" href="https://www.instagram.com/radialcode/?hl=en" target="blank"
                                 class="circle d-flex justify-content-center align-items-center">
                                 <span><svg width="16" height="17" viewBox="0 0 16 17" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -984,7 +984,7 @@
                                     </svg>
                                 </span>
                             </a>
-                            <a href="https://www.linkedin.com/company/radialcode/?originalSubdomain=in" target="blank"
+                            <a aria-label="linkdin" href="https://www.linkedin.com/company/radialcode/?originalSubdomain=in" target="blank"
                                 class="circle d-flex justify-content-center align-items-center">
                                 <span><svg width="20" height="21" viewBox="0 0 20 21" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -1043,7 +1043,7 @@
             </div>
         </footer>
         <!-- back to  top -->
-        <button id="backtotop" onclick="window.scroll(0,0)" class=" d_none back_top_btn  z-2 ">
+        <button aria-label="backtotop" id="backtotop" onclick="window.scroll(0,0)" class=" d_none back_top_btn  z-2 ">
             <span class="back mb-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="20" height="20">
                     <path
                         d="M3.22 10.53a.749.749 0 0 1 0-1.06l4.25-4.25a.749.749 0 0 1 1.06 0l4.25 4.25a.749.749 0 1 1-1.06 1.06L8 6.811 4.28 10.53a.749.749 0 0 1-1.06 0Z"
