--- a/index.html
+++ b/index.html
@@ -632,8 +632,8 @@
                     <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center">
                         <div class="border_Statistics d-flex justify-content-center align-items-center">
                             <div>
-                                <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">0<span class="counter"
-                                        data-target="1">1 </span></h4>
+                                <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">0<span class="counter"
+                                        data-target="1">1 </span></p>
                             </div>
                         </div>
                         <p class="ff_opensans fw-semibold text-white lh_6xl text-center mw_262 fs_6lg mt-3 pt-1">Places
@@ -645,8 +645,8 @@
                         class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5 mt-md-0 pt-4 pt-md-0">
                         <div class="border_Statistics d-flex justify-content-center align-items-center">
                             <div>
-                                <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
-                                        data-target="135">1 </span></h4>
+                                <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
+                                        data-target="135">1 </span></p>
                             </div>
                         </div>
                         <p class="ff_opensans fw-semibold text-white lh_5xl text-center mw_309 fs_6lg mt-3 pt-1">Average
@@ -658,8 +658,8 @@
                         class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5 mt-md-0 pt-4 pt-md-0">
                         <div class="border_Statistics d-flex justify-content-center align-items-center">
                             <div>
-                                <h4 class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
-                                        data-target="5"></span>x</h4>
+                                <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
+                                        data-target="5"></span>x</p>
                             </div>
                         </div>
                         <p class="ff_opensans fw-semibold text-white lh_6xl text-center mw_327 fs_6lg mt-3 pt-1">The
