png error solve

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             </div>
         </section>
         <!--------------------------------------------------- benifit-section --------------------------------------------------->
-        <div class="section_bg pt-md-4">
+        <div class="pt-md-4">
             <div class="container position-relative mw_990 py-md-5 py-4 mt-1">
                 <span class="ellipse_1 position-absolute"></span>
                 <span class="ellipse_2 position-absolute"></span>
@@ -569,7 +569,7 @@
             </div>
         </div>
         <!--------------------------------------------------- uderstanding-section --------------------------------------------------->
-        <div class="section_bg pt-md-4 mt_10">
+        <div class="pt-md-4 mt_10">
             <div class="container mw_1200 py-lg-5 mt-1">
                 <h1 class="mw_733 mb-md-5 pt-4 ff_opensans fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
                     Understanding <span class="font-gradient">Leveraged</span> Accounts
