--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
             <div class="container mw_1164">
                 <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-5"><span
                         class="gradient_text">Statistics</span> For Today</h2>
-                <div class="row pt-4 justify-content-center">
+                <div class="row pt-md-4 pt-3 justify-content-center">
                     <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center">
                         <div class="border_Statistics d-flex justify-content-center align-items-center">
                             <div>
@@ -642,7 +642,7 @@
                             register</p>
                     </div>
                     <div
-                        class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5 mt-md-0 pt-4 pt-md-0">
+                        class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
                         <div class="border_Statistics d-flex justify-content-center align-items-center">
                             <div>
                                 <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
@@ -653,9 +653,8 @@
                             Registrations
                             per day</p>
                     </div>
-
                     <div
-                        class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5 mt-md-0 pt-4 pt-md-0">
+                        class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
                         <div class="border_Statistics d-flex justify-content-center align-items-center">
                             <div>
                                 <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
