--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
             </div>
         </div>
         <!-- footer  -->
-        <footer class="mt-md-5 pt-5 position-relative z-1">
+        <footer class="mt-md-5 pt-lg-5 position-relative z-1">
             <span class="footerLeft d-block"></span>
             <span class="footerRight d-block"></span>
             <div class="container pt-lg-5 pb-4 pb-lg-5">
