--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                 <p class="ff_opensans fw-normal fs_xs lh_md white opacity-80 text-center pt-2 pt-sm-3 pt-md-4">In a matter of minutes,
                     one of
                     our AI mentors will contact you, No <br class="d-none d-lg-block"> Experience Required!</p>
-                <div class="row align-items-center pt-md-5 mt-3 min_h flex-column-reverse flex-lg-row">
+                <div class="row align-items-center pt-2 pt-md-5 mt-3 min_h flex-column-reverse flex-lg-row">
                     <div class="col-12 col-lg-6 pt-4 pt-lg-0">
                         <div class="AiStockCard mx-auto">
                             <h3 class="ff_opensans fw-semibold fs_4md white text-center">Start Trading with AI Stocks !
