--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         2024 with
                         the Top 7 Fastest-Growing <span class="header-text-gradiant"> AI Stocks!</span>
                     </h2>
-                    <p class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto  c-gray pt-4 mt-1">Major
+                    <p class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto  c-gray pt-2 pt-sm-4 mt-1">Major
                         AI
                         Stocks such
                         as Microsoft and Nvidia have surged over <span class=" fw-medium ">80%</span> in the past year.
