--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,7 @@
             </span>
             <div class="container py-4 py-md-5">
                 <div class="max_w_Faq mx-auto">
-                    <h2 class="ff_ff_opensanssans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked <span class="blueGraident textBg">Questions</span></h2>
+                    <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked <span class="blueGraident textBg">Questions</span></h2>
                     <div class="pt-4 pt-sm-5 mt_12">
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
@@ -51,7 +51,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-     <span class="max_w_heading d-sm-flex gap-1"> <span class="d-none d-sm-block">3. </span> How much does it cost to use the AI Trading Platform, and are there any discounts available?</span>
+     <p class="max_w_heading d-sm-flex gap-1"> <span class="d-none d-sm-block">3. </span> How much does it cost to use the AI Trading Platform, and are there any discounts available?</p>
       </button>
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -97,7 +97,7 @@
                                         <p class="mb-0 text-white" id="errorLastName"></p>
                                     </div>
                                 </div>
-                                <input id="Email" type="email" placeholder="Email" class="email-input-style-header mt-3 ff_opensans fw-normal fs-xs lh_xsm c-black-100 AiStockInput place">
+                                <input id="Email" type="email" placeholder="Email" class="mt-3 ff_opensans fw-normal fs-xs lh_xsm c-black-100 AiStockInput place w-100">
                                 <p class="mb-0 text-white" id="errorEmail"></p>
                                 <div class="d-flex align-items-center rounded-1 overflow-hidden mt-3 borderInput">
                                     <div class="d-flex align-items-center bg_grayblack white gap-1 p-3">+91
@@ -136,15 +136,15 @@
             <div class="container pt-lg-5 pb-4 pb-lg-5">
                 <div class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
                     <div class="maxWidth">
-                        <p class="open fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
-                        <p class="open fs_xs fw-normal white lh_xxl mb-0 opacity-80 pt-3 d-none d-sm-block ">
+                        <p class="ff_opensans fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
+                        <p class="ff_opensans fs_xs fw-normal white lh_xxl mb-0 opacity-80 pt-3 d-none d-sm-block ">
                             Empowering Your Financial Future
                             <span class="d-sm-block">with Intelligent Investments</span>
                         </p>
                         <p class=" d-sm-none ff_opensans fs_xs fw-normal white lh_xxl mb-0 opacity-80 pt-3">Privacy Policy | Conditions | Report Abuse/ Spam</p>
                     </div>
                     <div class="d-flex jusity-content-center flex-column py-3 mt_12 mt-sm-0 py-sm-0">
-                        <p class="open fw-semibold fs_sm lh_xxl white mb-0 text-center">
+                        <p class="ff_opensans fw-semibold fs_sm lh_xxl white mb-0 text-center">
                             Follow Us on
                         </p>
                         <div class="d-flex justify-content-center gapFooterLink footerPadding">
@@ -201,6 +201,8 @@
             </div>
 
         </footer>
+
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/app4.js"></script>
