--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <meta property="twitter:image" content="https://i.ibb.co/LzLxZsH/127-0-0-1-5500-index3-html.png" />
 </head>
 
-<body class="bg_body overflow_hidden">
+<body class="bg_body">
     <!-- preloader -->
-    <div id="preloder"
+    <!-- <div id="preloder"
         class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
         <div class="preloder text-white fs_2xl flex-column d-flex">
             <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
-    </div>
+    </div> -->
     <div class="overflow-x-hidden">
         <!-- header section  -->
         <header class=" bg-hero-img position-relative mb-100 overflow-x-clip  z-1">
@@ -65,7 +65,9 @@
                         2024 with
                         the Top 7 Fastest-Growing <span class="header-text-gradiant"> AI Stocks!</span>
                     </h2>
-                    <p class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto  c-gray pt-2 pt-sm-4 mt-1">Major
+                    <p
+                        class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto  c-gray pt-2 pt-sm-4 mt-1">
+                        Major
                         AI
                         Stocks such
                         as Microsoft and Nvidia have surged over <span class=" fw-medium ">80%</span> in the past year.
@@ -756,7 +758,8 @@
                             <span class="gradient_text">Deposit of $250 to 521$</span>
                         </h2>
                         <div class="mt-xl-3">
-                            <button aria-label="registernow" class="ff_opensans fw-bold fs_xs lh_xsm common_btn">Register Now</button>
+                            <button aria-label="registernow"
+                                class="ff_opensans fw-bold fs_xs lh_xsm common_btn">Register Now</button>
                         </div>
                     </div>
                 </div>
@@ -879,7 +882,8 @@
                         Stock</span>
                     Trading
                 </h2>
-                <p class="ff_opensans fw-normal fs_xs lh_md white opacity-80 text-center pt-2 pt-sm-3 pt-md-4">In a matter of minutes,
+                <p class="ff_opensans fw-normal fs_xs lh_md white opacity-80 text-center pt-2 pt-sm-3 pt-md-4">In a
+                    matter of minutes,
                     one of
                     our AI mentors will contact you, No <br class="d-none d-lg-block"> Experience Required!</p>
                 <div class="row align-items-center pt-2 pt-md-5 mt-3 min_h flex-column-reverse flex-lg-row">
@@ -983,7 +987,8 @@
                                     </svg>
                                 </span>
                             </a>
-                            <a aria-label="linkdin" href="https://www.linkedin.com/company/radialcode/?originalSubdomain=in" target="blank"
+                            <a aria-label="linkdin"
+                                href="https://www.linkedin.com/company/radialcode/?originalSubdomain=in" target="blank"
                                 class="circle d-flex justify-content-center align-items-center">
                                 <span><svg width="20" height="21" viewBox="0 0 20 21" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -1042,7 +1047,8 @@
             </div>
         </footer>
         <!-- back to  top -->
-        <button aria-label="backtotop" id="backtotop" onclick="window.scroll(0,0)" class=" d_none back_top_btn  z-2 ">
+        <button aria-label="backtotop" id="backtotop" onclick="window.scroll(0,0)"
+            class=" d_none back_top_btn bg-black  z-2 ">
             <span class="back mb-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="20" height="20">
                     <path
                         d="M3.22 10.53a.749.749 0 0 1 0-1.06l4.25-4.25a.749.749 0 0 1 1.06 0l4.25 4.25a.749.749 0 1 1-1.06 1.06L8 6.811 4.28 10.53a.749.749 0 0 1-1.06 0Z"
@@ -1071,9 +1077,8 @@
     </script>
     <!--======================botstrap-link=========================-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
     <script src="./assets/js/app.js"></script>
 
 </body>
