--- a/index.html
+++ b/index.html
@@ -628,42 +628,42 @@
         <section class="pt_Statistics mb_2 position-relative z-1">
             <div class="Statistics_ellips2 d-none d-md-block"></div>
             <div class="container mw_1164">
-                <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-5"><span
+                <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-4 mb-md-5"><span
                         class="gradient_text">Statistics</span> For Today</h2>
                 <div class="row pt-md-4 pt-3 justify-content-center">
-                    <div class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-5">
-                        <div class="border_Statistics d-flex justify-content-center align-items-center">
+                    <div class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-4 mt-md-5">
+                        <div class="border_Statistics d-flex justify-content-center align-items-center pb-lg-2">
                             <div>
                                 <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">0<span class="counter"
                                         data-target="1">1 </span></p>
                             </div>
                         </div>
-                        <p class="ff_opensans fw-semibold text-white lh_6xl text-center mw_262 fs_6lg mt-3 pt-1">Places
+                        <p class="ff_opensans fw-semibold text-white lh_6xl text-center mw_262 fs_6lg mt-2 mt-md-4 pt-1">Places
                             left
                             to
                             register</p>
                     </div>
                     <div
-                        class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
-                        <div class="border_Statistics d-flex justify-content-center align-items-center">
+                        class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
+                        <div class="border_Statistics d-flex justify-content-center align-items-center pb-lg-2">
                             <div>
                                 <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
                                         data-target="135">1 </span></p>
                             </div>
                         </div>
-                        <p class="ff_opensans fw-semibold text-white lh_5xl text-center mw_309 fs_6lg mt-3 pt-1">Average
+                        <p class="ff_opensans fw-semibold text-white lh_5xl text-center mw_209 fs_6lg mt-2 mt-md-4 pt-1">Average
                             Registrations
                             per day</p>
                     </div>
                     <div
-                        class="col-lg-4 col-md-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
-                        <div class="border_Statistics d-flex justify-content-center align-items-center">
+                        class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
+                        <div class="border_Statistics d-flex justify-content-center align-items-center pb-lg-2">
                             <div>
                                 <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
                                         data-target="5"></span>x</p>
                             </div>
                         </div>
-                        <p class="ff_opensans fw-semibold text-white lh_6xl text-center mw_327 fs_6lg mt-3 pt-1">The
+                        <p class="ff_opensans fw-semibold text-white lh_6xl text-center mw_327 fs_6lg mt-2 mt-md-4 pt-1">The
                             Average
                             Earnings
                             Increase</p>
