--- a/index3.html
+++ b/index3.html
@@ -8,25 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <style>
-        .numberinput-header .numberinput-header::-webkit-outer-spin-button,
-        .numberinput-header::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-        }
-
-        .numberinput-header[type=number] {
-            -moz-appearance: textfield;
-        }
-
-        .px-10 {
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="./assets/css/style3.css">
 </head>
 
 <body>
-    <header class=" bg-hero-img position-relative mb-100 overflow-x-clip  z-1">
+    <!-- header -->
+    <header class=" bg-hero-img position-relative mb-xl-100 mb-md-64 mb-45 overflow-x-clip  z-1">
         <nav class=" py-12 nav-background position-relative  z-1">
             <div class="container">
                 <div class=" d-flex  justify-content-between align-items-center ">
@@ -67,7 +54,7 @@
                     class=" d-flex align-items-center  align-items-lg-start    justify-content-between flex-column  flex-lg-row   align-items-start   mt-39">
                     <div class="max-w-654 w-100 px-lg-2 px-xl-0">
                         <div class="vedio">
-                            <video id="vid" controls src="https://aietf.ai/AI-ETF-v3/AI-ETF2.mp4" muted autoplay="autoplay" loop
+                            <video id="vid" controls src="./assets/images/video/herader-video.mp4" muted autoplay="autoplay" loop
                                 class="w-100  h-100 d-block  "></video>
                         </div>
                         <div class=" d-none d-lg-block ">
@@ -135,7 +122,7 @@
                                     class="email-input-style-header mt-3 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
                                 <p class=" mb-0 text-white " id="erroremail"></p>
                                 <div class=" d-flex align-items-center rounded-1 overflow-hidden    bg-white  mt-3  ">
-                                    <div class=" d-flex align-items-center bg-number  gap-1 p-3">+91 <svg width="8"
+                                    <div class=" d-flex align-items-center bg-number  gap-1 p-lg-3 p-12">+91 <svg width="8"
                                             height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 6L0.535898 0H7.4641L4 6Z" fill="#010101" />
                                         </svg>
@@ -159,7 +146,7 @@
                             extremely
                             high demand
                             for media coverage, registration closes in</p>
-                        <div class=" d-flex px-44 mt-4 gap-2  justify-content-between  align-items-center ">
+                        <div class=" d-flex mt-4 gap-2  justify-content-between  align-items-center ">
                             <div>
                                 <div class="box-time rounded-2">
                                     <p id="day" class="ff_opensans box-timenumber position-relative z-1 mb-0 fw-bold lh_10xl fs_xxl text-white">06</p>
@@ -197,6 +184,97 @@
         <span class=" ellipes4headerright-top d-none d-sm-block"></span>
         <span class=" ellipes5headerright-bottom d-none d-lg-block"></span>
     </header>
+    <!-- silder by  keyframes  -->
+    <section class="position-relative d-flex gap-20 overflow-x-clip mx-auto mb-5">
+        <div class="d-flex align-items-center gap-20 brand_slider_parent position-relative  start-0 top-0 h-100">
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Esther Howard</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$2,208</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,361</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/lognhariman.svg" alt="longhairman">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/orangetshirtman.svg" alt="orangetshirtman">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Devon Lane</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$5,265</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $3,489</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/girlface.svg" alt="girlface">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Ralph Edwards</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$4,654</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,584</p>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex align-items-center gap-20 brand_slider_parent2 position-absolute left-0 top-0 h-100">
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Esther Howard</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$2,208</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,361</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/lognhariman.svg" alt="longhairman">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$3,302</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/orangetshirtman.svg" alt="orangetshirtman">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Devon Lane</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$5,265</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $3,489</p>
+                </div>
+            </div>
+            <div class="man-profile-card  d-flex  align-items-center  gap-3">
+                <span>
+                    <img src="./assets/images/svg/girlface.svg" alt="girlface">
+                </span>
+                <div>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Ralph Edwards</h2>
+                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
+                            class='c-light-green'>$4,654</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,584</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
