--- a/index.html
+++ b/index.html
@@ -675,9 +675,27 @@
         <section class="py_average position-relative z-1">
             <div class="Statistics_ellips1 d-none d-xl-block"></div>
             <div class="Statistics_ellips3  d-none d-xl-block"></div>
-            <div class=" d-flex justify-content-between align-items-lg-center flex-lg-row flex-column pe-4 pe-xxl-5">
-                <div class="mw_800 mw_750 w-100">
-                    <div class="position-relative d-flex gap-12 overflow-hidden mx-auto">
+            <div class=" d-flex justify-content-between align-items-lg-center flex-lg-row flex-column pe-lg-4 pe-xxl-5">
+                <div class="mw_800 mw_750 col-12 w-100 average_hidden">
+                    <div class="d-flex gap-12 mb_12">
+                        <img src="./assets/images/webp/knx-logo.webp" alt="knx-logo" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/google-logo.webp" alt="google-img" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/spotify-logo.webp" alt="spotify-logo" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/tesla-logo.webp" alt="tasla-logo" class="w-100 mw_210 rounded-1">
+                    </div>
+                    <div class="d-flex gap-12 mb_12">
+                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/ford-logo.webp" alt="ford-logo" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/samsung-logo.webp" alt="samsung-logo" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/tata-logo.webp" alt="tata-logo" class="w-100 mw_210 rounded-1">
+                    </div>
+                    <div class="d-flex gap-12">
+                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/reliance-logo.webp" alt="reliance-img" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/stripe-logo.webp" alt="stripe-logo" class="w-100 mw_210 rounded-1">
+                        <img src="./assets/images/webp/adani.webp" alt="adani-logo" class="w-100 mw_210 rounded-1">
+                    </div>
+                    <!-- <div class="position-relative d-flex gap-12 overflow-hidden mx-auto">
                         <div
                             class="d-flex align-items-center gap-12 brand_slider_parent3 position-relative  start-0 top-0 h-100">
                             <img src="./assets/images/webp/knx-img.webp" alt="knx"
@@ -748,7 +766,7 @@
                             <img src="./assets/images/webp/adani.webp" alt="adani"
                                 class="company-dimension rounded-1 w-100">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class='mw_518 mw_450 mt-3 pt-1 pt-lg-0 mt-lg-0'>
                     <div class="ps-sm-4 ps-3 ps-xl-3 ps-xxl-0">
