--- a/index8.html
+++ b/index8.html
@@ -23,14 +23,14 @@
     <meta property="twitter:image" content="https://i.ibb.co/LzLxZsH/127-0-0-1-5500-index3-html.png" />
 </head>
 
-<body class="bg_body">
+<body class="bg_body overflow_hidden">
     <!-- preloader -->
-    <!-- <div id="preloder" class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
+    <div id="preloder" class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
         <div class="preloder text-white fs_2xl flex-column d-flex">
             <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
-    </div> -->
+    </div>
     <div class="overflow-x-hidden">
         <!-- header section  -->
         <header class=" bg-hero-img position-relative mb-100 overflow-x-clip  z-1">
@@ -779,13 +779,8 @@
                     </div>
                     <div class="col-12 col-lg-6">
                         <div class="d-flex justify-content-center align-items-center">
+
                             <div class="position-relative z-1">
-                                <div class="hexagonTwo">
-                                    <div class=" hexagon">
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- <div class="position-relative z-1">
                                 <div class="imgAi"><img class="w-100 " src="./assets/images/webp/aws.webp" alt="img">
                                 </div>
                                 <div class="imgAi"><img class="w-100 " src="./assets/images/webp/mainImg.webp" alt="img"></div>
@@ -795,7 +790,7 @@
                                 <div class="imgAi imgPostion"><img class="w-100" src="./assets/images/webp/iconImg.webp" alt="img"></div>
                                 <div class="imgAi imgPostion3"><img class="w-100" src="./assets/images/webp/nvidia.webp" alt="img"></div>
                                 <div class="imgAi imgPostion4"><img class="w-100" src="./assets/images/webp/path.webp" alt="img"></div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
