--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@
                     </ul>
                     <ul class=" mb-0 ps-0">
                         <li><a aria-label="sign-up" href="#"
-                                class=" text-decoration-none nav-small-screen d-block ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Sign
+                                class=" text-decoration-none nav-small-screen d-block ff_opensans text_black fw-bold fs_xs lh_xsm main-button   ">Sign
                                 Up</a></li>
                     </ul>
                 </div>
@@ -132,7 +132,7 @@
                                 </div>
                                 <p class=" mb-0 text-white " id="errornumber"></p>
                                 <button aria-label="fromsubmit" id="submit" type="submit"
-                                    class=" mt-32 text-decoration-none w-100 ff_opensans c-black-100 fw-bold fs_xs lh_xsm nav-button  ">Get
+                                    class=" mt-32 text-decoration-none w-100 ff_opensans c-black-100 fw-bold fs_xs lh_xsm main-button  ">Get
                                     Started</button>
                             </form>
                         </div>
