--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <div class=" container ">
                 <div class="px_2">
                     <h2 class="ff_opensans px-88 fw-bold lh_9xl mb-0 text-white mt-5 fs_xxl text-center ">Dive into
-                        <span class="header-text-gradiant"> the Explosive
+                        <span class="gradient_text"> the Explosive
                             Momentum</span> of
                         2024 with
-                        the Top 7 Fastest-Growing <span class="header-text-gradiant"> AI Stocks!</span>
+                        the Top 7 Fastest-Growing <span class="gradient_text"> AI Stocks!</span>
                     </h2>
                     <p class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto mb-0  c-gray pt-4 mt-1">
                         Major
@@ -668,27 +668,27 @@
             <div class=" d-flex justify-content-between align-items-lg-center flex-lg-row flex-column pe-lg-4 pe-xxl-5">
                 <div class="mw_xxl_800 mw_lg_629 col-12 w-100 me-lg-4 me-xl-0">
                     <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12 mb_12">
-                        <img src="./assets/images/webp/knx-logo.webp" alt="knx-logo" class="w-100 mw_averageimg rounded-1 d-block d-lg-none">
+                        <img src="./assets/images/webp/knx-logo.webp" alt="knx-logo" class="w-100 mw_averageimg average_img rounded-1 d-block d-lg-none">
                         <img src="./assets/images/webp/google-logo.webp" alt="google-img"
-                            class="w-100 mw_averageimg rounded-1">
+                            class="w-100 mw_averageimg average_img rounded-1">
                         <img src="./assets/images/webp/spotify-logo.webp" alt="spotify-logo"
-                            class="w-100 mw_averageimg rounded-1">
-                        <img src="./assets/images/webp/tesla-logo.webp" alt="tasla-logo" class="w-100 mw_averageimg rounded-1">
+                            class="w-100 mw_averageimg average_img rounded-1">
+                        <img src="./assets/images/webp/tesla-logo.webp" alt="tasla-logo" class="w-100 mw_averageimg average_img rounded-1">
                     </div>
                     <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12 mb_12">
-                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo" class="w-100 mw_averageimg rounded-1 d-block d-lg-none">
-                        <img src="./assets/images/webp/ford-logo.webp" alt="ford-logo" class="w-100 mw_averageimg rounded-1">
+                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo" class="w-100 mw_averageimg average_img rounded-1 d-block d-lg-none">
+                        <img src="./assets/images/webp/ford-logo.webp" alt="ford-logo" class="w-100 mw_averageimg average_img rounded-1">
                         <img src="./assets/images/webp/samsung-logo.webp" alt="samsung-logo"
-                            class="w-100 mw_averageimg rounded-1">
-                        <img src="./assets/images/webp/tata-logo.webp" alt="tata-logo" class="w-100 mw_averageimg rounded-1">
+                            class="w-100 mw_averageimg average_img rounded-1">
+                        <img src="./assets/images/webp/tata-logo.webp" alt="tata-logo" class="w-100 mw_averageimg average_img rounded-1">
                     </div>
                     <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12">
-                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo" class="w-100 mw_averageimg rounded-1 d-block d-lg-none">
+                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo" class="w-100 mw_averageimg average_img rounded-1 d-block d-lg-none">
                         <img src="./assets/images/webp/reliance-logo.webp" alt="reliance-img"
-                            class="w-100 mw_averageimg rounded-1">
+                            class="w-100 mw_averageimg average_img rounded-1">
                         <img src="./assets/images/webp/stripe-logo.webp" alt="stripe-logo"
-                            class="w-100 mw_averageimg rounded-1">
-                        <img src="./assets/images/webp/adani.webp" alt="adani-logo" class="w-100 mw_averageimg rounded-1">
+                            class="w-100 mw_averageimg average_img rounded-1">
+                        <img src="./assets/images/webp/adani.webp" alt="adani-logo" class="w-100 mw_averageimg average_img rounded-1">
                     </div>
                     <!-- <div class="position-relative d-flex gap-12 overflow-hidden mx-auto">
                         <div
